# pyspark-docker-example

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  Dockerfile.spark-py  README.md  docker-compose.yml  pyproject.toml
.config/: yamlfix.toml  yamllint.yaml
.github/: dependabot.yaml
.github/workflows/: code-quality.yaml  pre-commit.yaml
src/sparkie/: __init__.py  config.py  main.py  ml.py
