[project]
name = "sparkie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy>=2.2.6",
    "pyspark==3.4.0",
]

[project.scripts]
sparkie = "sparkie:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.15.0"]
build-backend = "uv_build"
