[project]
name = "sparkie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy>=2.0",
    "pyspark>=4.0",
    "python-dotenv>=1.0",
    "setuptools>=83.0.0",
]

[tool.uv]
exclude-newer = "1 week"
constraint-dependencies = []

[project.scripts]
sparkie = "sparkie:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.15.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
